# ubxlib

./: .gitmodules
cell/api/: u_cell.h  u_cell_pwr.h
common/network/api/: u_network_config_ble.h
gnss/api/: u_gnss.h
gnss/src/: u_gnss_stub_cell.c
port/platform/cell_ucpu/r5/runner/: CMakeLists.txt
port/platform/windows/app/: u_main.c
port/platform/windows/mcu/win32/runner/: CMakeLists.txt
